<resources>
    <string name="app_name">ChatApplication</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="signals">Signals</string>
    <string name="messages">Messages</string>
    <string name="empty_conversation">You do not have any conversation history.</string>
    <string name="type_your_message">Type your message</string>

    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="group_name">Group name</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="gallery">Gallery: </string>
    <string name="new_chat">New chat</string>
</resources>