<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_300" >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/log_in"
        android:textColor="@color/white_100"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signals"
        android:textColor="@color/white_100"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/email"
        android:textColor="@color/white_100"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:padding="10dp"
        android:textSize="16sp"
        android:hint="@string/email"
        android:textColorHint="@color/white_100"
        android:textColor="@color/white_100"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/emailCorrectFormatImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/white_100"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white_100"
        android:textColorHint="@color/white_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/passwordEyeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/password_eye"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

    <android.widget.Button
        android:id="@+id/loginButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        android:textColor="@color/white_100"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:background="@drawable/interaction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>