<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_300" >

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/back"
            android:textColor="@color/white_100"
            android:textSize="14sp"
            android:backgroundTint="@color/black_400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/create"
            android:textColor="@color/white_100"
            android:textSize="14sp"
            android:backgroundTint="@color/black_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/groupImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

        <EditText
            android:id="@+id/groupNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_edit_text"
            android:ellipsize="start"
            android:ems="10"
            android:hint="@string/group_name"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="3"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/white_100"
            android:textColorHint="@color/white_100"
            android:textSize="16sp"
            android:windowSoftInputMode="adjustResize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/groupImage"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/membersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>